--- a/template_tag_html/pyproject.toml
+++ b/template_tag_html/pyproject.toml
@@ -14,6 +14,9 @@ pandas = "^2.2.2"
 mysql-connector = "^2.2.9"
 python-dotenv = "^1.0.1"
 ruff = "^0.4.5"
+jwt = "^1.3.1"
+python-decouple = "^3.8"
+flask = "^3.0.3"
 
 
 [build-system]
